# serializer version: 1
# name: test_context[all_nodes]
  list([
    '3c4c1d',
    '13f22f',
    '7eac4b',
    '6b1664',
    '124e1c',
  ])
# ---
# name: test_context[all_streams]
  list([
    '3c4c1d:None',
    '7eac4b:0',
    '6b1664:0',
    '124e1c:0',
  ])
# ---
# name: test_context[node_labels]
  dict({
    '124e1c': 's2',
    '13f22f': 'out',
    '3c4c1d': '0',
    '6b1664': 's1',
    '7eac4b': 's0',
  })
# ---
# name: test_context[outgoing_nodes]
  dict({
    '124e1c:0': list([
      list([
        '13f22f',
        0,
      ]),
    ]),
    '3c4c1d:None': list([
      list([
        '7eac4b',
        0,
      ]),
    ]),
    '6b1664:0': list([
      list([
        '124e1c',
        0,
      ]),
      list([
        '124e1c',
        1,
      ]),
    ]),
    '7eac4b:0': list([
      list([
        '6b1664',
        0,
      ]),
    ]),
  })
# ---
# name: test_context[outgoing_streams]
  dict({
    '124e1c': list([
      '124e1c:0',
    ]),
    '3c4c1d': list([
      '3c4c1d:None',
    ]),
    '6b1664': list([
      '6b1664:0',
    ]),
    '7eac4b': list([
      '7eac4b:0',
    ]),
  })
# ---
